--- a/src/template/index.html
+++ b/src/template/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <form action="/neighbourhood" method="post">
-        <input type="text" name="content" rows="3" cols="60"></input>
-        <input type="submit" value="Find Neighbour">
+        <input type="text" name="content" rows="3" cols="60" />
+        <input type="submit" value="Find Neighbour" />
     </form>
     <ul>
         {% for ren in rens %}
