Modified main.py, now using key_name instead of number id.

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form action="/neighbourhood" method="post">
-        <input type="text" name="content" rows="3" cols="60" />
+        <input type="text" name="content" />
         <input type="submit" value="Find Neighbour" />
     </form>
     <ul>
