--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,21 +1,6 @@
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<title>renjian-neighbour</title>
-<link type="text/css" rel="stylesheet" href="/css/style.css" />
-<meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/> 
-<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
-<link rel="stylesheet" href="css/advanced.css" type="text/css" media="screen" charset="utf-8" /> 
-</head>
-<body>
-    <!-- header -->
-	<h1 id="site-name"><a rel="home" href="/">renjian-Neighbour</a></h1> 
-	<hr /> 
-	<p id="navigation-top" class="navigation"> 
-	    <a class="to-home" href="http://mobile.carringtontheme.com">Home</a> |
-	<a href="#pages">Pages</a></p> 
-	<hr />
-	
+{% extends "base.html" %}
+
+{% block content %}	
 	<!-- form -->
 	<div class="group"> 
     <form id="find" action="/neighbourhood" method="post"> 
@@ -40,34 +25,4 @@
         {% endfor %}
     </ul> 
     <hr />
-
-    <!-- navigation -->
-	<p id="navigation-bottom" class="navigation"> 
-    <a class="to-home" href="http://mobile.carringtontheme.com">Home</a> |
-	<a href="#pages">Pages</a></p> 
-	<hr /> 
-
-    <!-- about -->
-	<div id="about" class="group"> 
-        <h3>About</h3> 
-        Renjian-Neighbour is a easy Google App Engine based renjian API app.<br />
-        Author is Arthur Wang, an intern of renjian.com.
-        <a class="more" href="http://arthraim.cn/">Arthraim.cn &rarr;</a>
-    </div>
-    
-    <!-- footer -->
-    <div id="footer"> 
-        <hr /> 
-        <p class="small">
-        Produced by <a href="http://renjian.com/arthraim" target="_blank"><strong>Arthraim</strong></a>
-         | Powered by <a href="http://renjian.com/api.html" target="_blank"><strong>Renjian API</strong></a>
-         and <a href="http://code.google.com/appengine/" target="_blank"><strong>Google App Engine</strong></a>
-         | Theme by <a href="http://carringtontheme.com"><strong>Carrington</strong></a>.<br /> 
-        </p> 
-        <p id="developer-link"><a href="http://crowdfavorite.com" title="Custom WordPress development, design and backup services." rel="developer designer">Carrington Theme by Crowd Favorite</a></p> 
-        <div class="clear"></div> 
-    </div> 
-    <a href="http://arthraim.cn/renjian/deck/get.html" target="_blank" style="background: #000; color: #fff; position: fixed; bottom: 0; left: 0; padding: 5px 7px; text-decoration: none; opacity:.50;filter: alpha(opacity=50); -moz-opacity: 0.5;">&larr; Get renjian-Deck now</a>
-    
-</body>
-</html>
+{% endblock %}
