result.html now has a skin, added mobile.js, touch.css for it.

--- a/src/css/advanced.css
+++ b/src/css/advanced.css
@@ -26,7 +26,7 @@ body {
 }
 h1 {font-size:18px;}
 hr {display:none;}
-a {color:blue;}
+a {color:#0B7ECE;}
 blockquote {
 	border-left:2px solid #ddd;
 	margin:0 0 0 5px;
