Updated some details.(Actually the program logical is poor now)

--- a/src/template/base.html
+++ b/src/template/base.html
@@ -44,7 +44,7 @@
          and <a href="http://code.google.com/appengine/" target="_blank"><strong>Google App Engine</strong></a>
          | Theme by <a href="http://carringtontheme.com"><strong>Carrington</strong></a>.<br /> 
         </p> 
-        <p id="developer-link"><a href="http://crowdfavorite.com" title="Custom WordPress development, design and backup services." rel="developer designer">Carrington Theme by Crowd Favorite</a></p> 
+        <p id="developer-link"><a href="javascript:void();" title="Produced by Arthraim | Powered by Renjian API and Google App Engine | Theme by Crowd Favorite.">Theme by Crowd Favorite</a></p> 
         <div class="clear"></div> 
     </div> 
     <a href="http://arthraim.cn/renjian/deck/get.html" target="_blank" style="background: #000; color: #fff; position: fixed; bottom: 0; left: 0; padding: 5px 7px; text-decoration: none; opacity:.50;filter: alpha(opacity=50); -moz-opacity: 0.5;">&larr; Get renjian-Deck now</a>
