--- a/src/template/result.html
+++ b/src/template/result.html
@@ -10,7 +10,7 @@
             break;
         }
     }
-    document.write('<script type=\'text\/javascript\' src=\'http:\/\/ajax.googleapis.com\/ajax\/libs\/jquery\/1.4.0\/jquery.min.js\'><\/script><script type=\'text\/javascript\' src=\'http:\/\/carringtontheme.com\/wp\/wp-content\/themes\/carrington-mobile\/js\/mobile.js?ver=1.0\'><\/script>');
+    document.write('<script type=\'text\/javascript\' src=\'http:\/\/ajax.googleapis.com\/ajax\/libs\/jquery\/1.4.0\/jquery.min.js\'><\/script><script type=\'text\/javascript\' src=\'http:\/\/renjian-neighbour.appspot.com\/js\/mobile.js?ver=1.0\'><\/script>');
     //--></script>
 
     <p id="next-prev-top" class="pagination"><span>&laquo;</span> 
