Fixed some problem caused by encoding. index.html only show first 10 recent users.

--- a/src/template/result.html
+++ b/src/template/result.html
@@ -42,7 +42,7 @@
 	        <h2 class="table-title" id="recent">Left Neighbour</h2> 
 	        <ul class="disclosure table group"> 
                 <li class="page_item">
-                <a>
+                <a href="http://renjian.com/{{ left.screen_name }}" target="_blank">
                     <h1>{{ left.screen_name }}</h1>
 			        <p>{{ left.name }} | {{ left.id }}</p>
 			        <div class="clear"></div> 
@@ -62,7 +62,7 @@
 	        <h2 class="table-title" id="pages">Right Neighbour</h2> 
 	        <ul class="disclosure table group"> 
 	            <li class="page_item">
-                <a>
+                <a href="http://renjian.com/{{ right.screen_name }}" target="_blank">
                     <h1>{{ right.screen_name }}</h1>
                     <p>{{ right.name }} | {{ right.id }}</p>
                     <div class="clear"></div> 
