Added /users for check who used this app, using users.html as its template, add an entry on index.html. Fixed some words on the pages in order to be more friendly.

--- a/src/template/base.html
+++ b/src/template/base.html
@@ -30,7 +30,7 @@
     <!-- about -->
     <div id="about" class="group"> 
         <h3>About</h3> 
-        Renjian-Neighbour is a easy Google App Engine based renjian API app.<br />
+        Renjian-Neighbour is an easy Google App Engine based renjian API app.<br />
         Author is Arthur Wang, an intern of renjian.com.
         <a class="more" href="http://arthraim.cn/">Arthraim.cn &rarr;</a>
     </div>
