--- a/src/template/index.html
+++ b/src/template/index.html
@@ -24,6 +24,13 @@
                 </a>
             </li>
         {% endfor %}
+        <li class="pagination">
+            <span>&laquo;</span> 
+			<span class="next"></span> 
+			<span>|</span> 
+			<span class="prev"><a href="/users" >See who else found his neighbour</a></span> 
+			<span>&raquo;</span>
+		</li>
     </ul> 
     <hr />
 {% endblock %}
