--- a/src/template/result.html
+++ b/src/template/result.html
@@ -14,9 +14,9 @@
     //--></script>
 
     <p id="next-prev-top" class="pagination"><span>&laquo;</span> 
-	<span class="next"><a href="/" rel="next">renjian-Neighbour</a></span> 
+	<span class="next"><a href="/" rel="next">home</a></span> 
 	<span>|</span> 
-	<span class="prev"><a href="http://renjian.com/" rel="prev">renjian.com</a></span> 
+	<span class="prev"><a href="http://renjian.com/" rel="prev">Rush to renjian.com</a></span> 
 	<span>&raquo;</span></p> 
 	
 	<div id="content" class="group"> 
@@ -30,9 +30,9 @@
 	</div> 
 		 
 	<p id="next-prev-bottom" class="pagination"><span>&laquo;</span> 
-	<span class="next"><a href="/" rel="next">renjian-Neighbour</a></span> 
+	<span class="next"><a href="/" rel="next">home</a></span> 
 	<span>|</span> 
-	<span class="prev"><a href="http://renjian.com/" rel="prev">renjian.com</a></span> 
+	<span class="prev"><a href="http://renjian.com/" rel="prev">Rush to renjian.com</a></span> 
 	<span>&raquo;</span></p> 
 	<hr /> 
 
