--- a/src/template/base.html
+++ b/src/template/base.html
@@ -31,8 +31,10 @@
     <div id="about" class="group"> 
         <h3>About</h3> 
         Renjian-Neighbour is an easy Google App Engine based renjian API app.<br />
-        Author is Arthur Wang, an intern of renjian.com.
-        <a class="more" href="http://arthraim.cn/">Arthraim.cn &rarr;</a>
+        Author is Arthur Wang, an intern of renjian.com.<br />
+        You can follow me on Renjian.com 
+        @<a class="more" href="http://renjian.com/arthraim" target="_blank">Arthraim</a>
+        or visit my blog <a class="more" href="http://arthraim.cn/">Arthraim.cn &rarr;</a>
     </div>
     
     <!-- footer -->
