--- a/renjian_neighbour/templates/base.html
+++ b/renjian_neighbour/templates/base.html
@@ -30,11 +30,11 @@
     <!-- about -->
     <div id="about" class="group"> 
         <h3>About</h3> 
-        Renjian-Neighbour is an easy Google App Engine based renjian API app.<br />
+        Renjian-Neighbour is an app over Renjian API.<br />
         Author is Arthur Wang, an intern of renjian.com.<br />
-        You can follow me on Renjian.com 
+        You can follow Arthur on Renjian.com 
         @<a class="more" href="http://renjian.com/arthraim" target="_blank">Arthraim</a>
-        or visit my blog <a class="more" href="http://arthraim.cn/">Arthraim.cn &rarr;</a>
+        or visit his blog <a class="more" href="http://arthraim.cn/">Arthraim.cn &rarr;</a>
     </div>
     
     <!-- footer -->
@@ -43,10 +43,9 @@
         <p class="small">
         Produced by <a href="http://renjian.com/arthraim" target="_blank"><strong>Arthraim</strong></a>
          | Powered by <a href="http://renjian.com/api.html" target="_blank"><strong>Renjian API</strong></a>
-         and <a href="http://code.google.com/appengine/" target="_blank"><strong>Google App Engine</strong></a>
          | Theme by <a href="http://carringtontheme.com"><strong>Carrington</strong></a>.<br /> 
         </p>
-        <p id="developer-link"><a href="javascript:void();" title="Produced by Arthraim | Powered by Renjian API and Google App Engine | Theme by Crowd Favorite.">Theme by Crowd Favorite</a></p> 
+        <p id="developer-link"><a href="javascript:void();" title="Produced by Arthraim | Powered by Renjian API | Theme by Crowd Favorite.">Theme by Crowd Favorite</a></p> 
         <div class="clear"></div> 
     </div> 
     
